- Adds "Select All" to replica, migrations, endpoints and projects - Fixes small layout issues

--- a/src/components/LoginPage/LoginPage.scss
+++ b/src/components/LoginPage/LoginPage.scss
@@ -21,6 +21,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   height: 100%;
   background-image: url('../../public/images/star-bg.jpg');
   background-position: center center;
+  position: relative;
   .coriolisText {
     width: 208px;
     height: 40px;
