--- a/src/components/WithSidebar/WithSidebar.scss
+++ b/src/components/WithSidebar/WithSidebar.scss
@@ -20,7 +20,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 .root {
   display: flex;
   height: 100%;
-
+  min-width: 1180px;
 }
 .sidebar {
   width: 320px;
